# piotserver

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_cpp  LICENSE.txt  README.md  WIFI_STABILITY.md  compile_commands.json  docker-compose.yml  makefile
Notes/: The piotserver.props.json file.md  cmdline.txt  config.txt  notes.txt
Notes/For PAW users/: piserver.paw
Notes/For PAW users/com.vmeng.PawExtensions.piServerSig/: piServerSig.js
assets/: ch10.props.json  fafo.props.json  farm.props.json  garden.props.json  garden30.props.json  ping.props.json  piotserver.props copy.json  piotserver.props.json  rules.props.json  sample.props.json  shutdown.props.json  sigtest.props.json  sprinkler.piotserver.props.json  sprinkler1.piotserver.props.json  tankdepth.props.json  test.piotserver.props.json  valvemaster.props.json  valvenode.props.json
drivers/ADS1115/: ADS1115.hpp  ADS1115_Device.cpp  ADS1115_Device.hpp  ADS1115_factory.cpp  CMakeLists.txt  makefile
drivers/ADS1115/ADS1115.xcodeproj/: project.pbxproj
drivers/BME280/: BME280.cpp  BME280.hpp  BME280_Device.cpp  BME280_Device.hpp  BME280_factory.cpp  CMakeLists.txt  makefile
drivers/BME280/BME280.xcodeproj/: project.pbxproj
drivers/FAULT_SIG/: FAULT_SIG_Device.cpp  FAULT_SIG_Device.hpp  FAULT_SIG_factory.cpp  makefile
drivers/MCP23008/: CMakeLists.txt  MCP23008.cpp  MCP23008.hpp  MCP23008_Device.cpp  MCP23008_Device.hpp  MCP23008_factory.cpp  makefile
drivers/MCP23008/MCP23008.xcodeproj/: project.pbxproj
drivers/MCP3427/: CMakeLists.txt  MCP3427.cpp  MCP3427.hpp  MCP3427_Device.cpp  MCP3427_Device.hpp  MCP3427_factory.cpp  makefile
drivers/MCP3427/MCP3427.xcodeproj/: project.pbxproj
drivers/PCA9536/: CMakeLists.txt  PCA9536.cpp  PCA9536.hpp  PCA9536_Device.cpp  PCA9536_Device.hpp  PCA9536_factory.cpp  makefile
drivers/PCA9536/PCA9536.xcodeproj/: project.pbxproj
drivers/PCA9671/: CMakeLists.txt  PCA9671.cpp  PCA9671.hpp  PCA9671_Device.cpp  PCA9671_Device.hpp  PCA9671_factory.cpp  makefile
drivers/PCA9671/PCA9671.xcodeproj/: project.pbxproj
drivers/POWERCONTROL/: POWERCONTROL.cpp  POWERCONTROL.hpp  POWERCONTROL_Device.cpp  POWERCONTROL_Device.hpp  POWERCONTROL_factory.cpp  makefile
drivers/PWRGATE/: CMakeLists.txt  PWRgate_Device.cpp  PWRgate_factory.cpp  makefile
drivers/PWRGATE/PWRGATE.xcodeproj/: project.pbxproj
drivers/PWRgate/: CMakeLists.txt  PWRgate_Device.cpp  PWRgate_Device.hpp
drivers/PWRgate/PWRgate.xcodeproj/: project.pbxproj
drivers/QWIIC_RELAY/: CMakeLists.txt  QWIIC_RELAY.cpp  QWIIC_RELAY.hpp  QWIIC_RELAY_Device.cpp  QWIIC_RELAY_Device.hpp  QWIIC_RELAY_factory.cpp  makefile
drivers/QWIIC_RELAY/QWIIC_RELAY.xcodeproj/: project.pbxproj
drivers/QwiicButton/: CMakeLists.txt  QwiicButton.cpp  QwiicButton_Device.cpp  QwiicButton_Device.hpp  QwiicButton_factory.cpp  makefile
drivers/QwiicButton/QwiicButton.xcodeproj/: project.pbxproj
drivers/SAMPLE/: CMakeLists.txt  SAMPLE_Device.cpp  SAMPLE_Device.hpp  SAMPLE_factory.cpp  makefile
drivers/SAMPLE/SAMPLE.xcodeproj/: project.pbxproj
drivers/SHT25/: CMakeLists.txt  SHT25.cpp  SHT25.hpp  SHT25_Device.cpp  SHT25_Device.hpp  SHT25_factory.cpp  makefile
drivers/SHT25/SHT25.xcodeproj/: project.pbxproj
drivers/SHT30/: CMakeLists.txt  SHT30.cpp  SHT30.hpp  SHT30_Device.cpp  SHT30_Device.hpp  SHT30_factory.cpp  makefile
drivers/SHT30/SHT30.xcodeproj/: project.pbxproj
drivers/SHUTDOWN_SIG/: SHUTDOWN_SIG_Device.cpp  SHUTDOWN_SIG_Device.hpp  SHUTDOWN_SIG_factory.cpp  makefile
drivers/TANKDEPTH/: TankDepth_Device.cpp  TankDepth_factory.cpp  makefile
drivers/TCA9534/: CMakeLists.txt  TCA9534.cpp  TCA9534.hpp  TCA9534_Device.cpp  TCA9534_Device.hpp  TCA9534_factory.cpp  makefile
drivers/TCA9534/TCA9534.xcodeproj/: project.pbxproj
drivers/TMP10X/: CMakeLists.txt  TMP10X.cpp  TMP10X.hpp  TMP10X_Device.cpp  TMP10X_Device.hpp  TMP10X_factory.cpp  makefile
drivers/TMP10X/TMP10X.xcodeproj/: project.pbxproj
drivers/VALVEMASTER/: VALVEMASTER.cpp  VALVEMASTER.hpp  VALVEMASTER_Device.cpp  VALVEMASTER_Device.hpp  VALVEMASTER_factory.cpp  makefile
drivers/VELM6030/: VELM6030_Device.cpp  VELM6030_factory.cpp  makefile
for etc:init.d:/: piotserver.sh
macstuff/macincludes/: macos_gpiod.cpp  macos_gpiod.h
macstuff/macincludes-old/: macos_gpiod.h
pIoTServer.xcodeproj/: project.pbxproj
pIoTServer.xcodeproj/xcshareddata/xcschemes/: pIoTServer.xcscheme
piotserver.xcworkspace/: contents.xcworkspacedata
piottool/: makefile
piottool/src/: CmdLineParser.cpp  CmdLineParser.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  PToolContext.hpp  PToolModule.hpp  PToolModuleAPI.hpp  main.cpp
piottool/src/modules/PCA9536/: PCA9536Tool.cpp  PCA9536Tool.hpp  makefile
piottool/src/modules/TMP10X/: TMP10XTool.cpp  TMP10XTool.hpp  makefile
plugins/: READ_ME.txt
powercontrol/: README.md  makefile  powercontrol.c
src/: ADS1115.cpp  Action.cpp  Actuator_Device.cpp  Actuator_Device.hpp  CPUTEMP_Device.cpp  CPUTEMP_Device.hpp  CommonDefs.hpp  EventAction.hpp  EventTrigger.cpp  GPIO.cpp  GPIO.hpp  I2C.cpp  I2C.hpp  IncidentMgr.cpp  IncidentMgr.hpp  LogMgr.cpp  LogMgr.hpp  NotificationMgr.cpp  NotificationMgr.hpp  PropValKeys.hpp  RESTServerConnection.cpp  REST_URL.cpp  REST_URL.hpp  RESTutils.cpp  RESTutils.hpp  RPi_RelayBoardDevice.cpp  RPi_RelayBoardDevice.hpp  Rule.cpp  Rule.hpp  Sequence.cpp  Sequence.hpp  SerialStream.cpp  SerialStream.hpp  ServerCmdQueue.cpp  ServerCmdValidators.hpp  ServerNouns.cpp  ServerNouns.hpp  SolarTimeMgr.cpp  SolarTimeMgr.hpp  Sprinkler_Device.cpp  (+42 more)
